--- a/SMSSDKSample/AndroidManifest.xml
+++ b/SMSSDKSample/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.smssdk.demo"
     android:versionCode="8"
-    android:versionName="1.1.7" >
+    android:versionName="1.1.3" >
     
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
+    <!-- 统计SDK用的 -->
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <supports-screens
         android:anyDensity="true"
@@ -46,6 +49,14 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:windowSoftInputMode="stateHidden|adjustResize" />
 
+        <!-- 统计用，service用于保证一定能够向服务器上传数据 -->
+        <service
+            android:name="cn.sharesdk.analysis.server.RemoteService"
+            android:process=":remote" />
+        
+        <!-- 添加 APPKEY 和 渠道号  -->
+        <meta-data android:name="SHARESDK_APPKEY" android:value="67f3258a518d9e074199124768bcc8e1"/>
+        <meta-data android:name="SHARESDK_CHANNEL" android:value="AnalysisSDK_Formal"/>
         
     </application>
 
